[project]
name = "economy"
version = "1.0.0"
description = "Economy package for BallsDex — catch income, ball selling and passive income"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "xoyzo", email = "cheapcandiez@gmail.com" },
]
readme = "README.md"
# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Homepage = "https://github.com/xoyzo/economy"
